--- a/cart.html
+++ b/cart.html
@@ -100,21 +100,22 @@
                                 <div class="cart-summary-detail mb-24">
                                     <div class="d-flex justify-content-between align-items-center mb-24">
                                         <p class="lead color-black">SUBTOTAL</p>
-                                        <p class="lead res-sub-total">560.00</p>
+                                        <p class="lead sub-total">560.00</p>
                                     </div>
                                     <div class="d-flex justify-content-between align-items-center mb-3">
                                       <p class="lead color-black mb-0">DESTINO</p>
                                       <select class="destino">
                                         <option selected value="Medellin">Medellin - $0</option>
                                         <option value="Bello">Bello - $10.000</option>
+                                        <option value="Copacabana">Copacabana - $20.000</option>
                                         <option value="Itagui">Itagui - $15.000</option>
                                         <option value="Envigado">Envigado - $15.000</option>
                                         <option value="Sabaneta">Sabaneta - $15.000</option>
                                         <option value="La Estrella">La Estrella - $20.000</option>
                                         <option value="Caldas">Caldas - $20.000</option>
-                                        <option value="Copacabana">Copacabana - $20.000</option>
                                       </select>
                                   </div>
+                            
                                     <div class="d-flex justify-content-between align-items-center mb-24">
                                         <p class="lead color-black">VALOR DOMICILIO</p>
                                         <p class="lead valor-domi">$10.000</p>
