se modifica archivo detallecarrito.js

--- a/checkout.html
+++ b/checkout.html
@@ -169,7 +169,7 @@
                                             <path d="M16.2522 11.9789C14.4658 10.1925 13.7513 6.14339 15.6567 4.23792M15.6567 4.23792C14.565 5.3296 11.4885 7.21521 7.91576 3.64246M15.6567 4.23792L4.34301 15.5516" stroke="#FCFDFD" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                         </svg>
                                     </span>
-                                    Place Order
+                                    Pagar orden
                                 </button>
                             </div>
                         </div>
