--- a/checkout.html
+++ b/checkout.html
@@ -137,7 +137,7 @@
                                     </div>
                                     <div class="d-flex justify-content-between align-items-center mb-32">
                                         <p class="lead color-black">SUBTOTAL</p>
-                                        <p class="lead color-black res-sub-total">$560.00</p>
+                                        <p class="lead color-black res sub-total">$560.00</p>
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-between align-items-center mb-32">
